// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffChecker coverage decreased should match snapshot 1`] = `
Object {
  "files": Object {
    "fileA": Object {
      "decreased": true,
      "deltas": Object {
        "branches": -50,
        "functions": -50,
        "lines": -50,
        "statements": -50,
      },
    },
  },
  "regression": true,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 50,
      "functions": 50,
      "lines": 50,
      "statements": 50,
    },
  },
}
`;

exports[`diffChecker coverage increased should match snapshot 1`] = `
Object {
  "files": Object {
    "fileA": Object {
      "decreased": false,
      "deltas": Object {
        "branches": 100,
        "functions": 100,
        "lines": 100,
        "statements": 100,
      },
    },
  },
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 100,
      "functions": 100,
      "lines": 100,
      "statements": 100,
    },
  },
}
`;

exports[`diffChecker no total should match snapshot 1`] = `
Object {
  "files": Object {
    "fileA": Object {
      "decreased": false,
      "deltas": Object {
        "branches": 100,
        "functions": 100,
        "lines": 100,
        "statements": 100,
      },
    },
  },
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 0,
      "functions": 0,
      "lines": 0,
      "statements": 0,
    },
  },
}
`;

exports[`diffChecker only check lines should match snapshot 1`] = `
Object {
  "files": Object {
    "fileA": Object {
      "decreased": false,
      "deltas": Object {
        "branches": -50,
        "functions": -50,
        "lines": 50,
        "statements": -50,
      },
    },
  },
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 50,
      "functions": 50,
      "lines": 50,
      "statements": 50,
    },
  },
}
`;

exports[`diffChecker skip non changed files should match snapshot 1`] = `
Object {
  "files": Object {},
  "regression": false,
  "totals": Object {
    "decreased": false,
    "deltas": Object {
      "branches": 100,
      "functions": 100,
      "lines": 100,
      "statements": 100,
    },
  },
}
`;
